--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="canvas">
     <div class="underscores">
       <input id="word"></input>
-      <button onclick="guess()" id="word-submit">Guess</button>
+      <button onclick="gameInit()" id="word-submit">Guess</button>
     </div>
   </div>
 
@@ -38,7 +38,8 @@
 
 
   <script src="common-words.js"></script>
-  <script src="wordgame.js"></script>
+  <script src="gameInit.js"></script>
+<!--  <script src="wordgame.js"></script> -->
 </body>
 
 </html>
